--- a/html/23.10.27_html28.html
+++ b/html/23.10.27_html28.html
@@ -50,6 +50,7 @@
       /* absolute */
       /*
       - static이 아닌 값을 가지는 가장 가까운 조상 기준
+      - static에는 영향을 주지 않는다.
       - 만약 static이 없다면 -> 뷰포트 (브라우저) 기준으로 배치
       - 문서 흐름을 벗어나 기존 자기 자리도 없어지고 이동
         */
