집가서 더하자

--- a/html/23.10.28_html37(실습).html
+++ b/html/23.10.28_html37(실습).html
@@ -12,7 +12,7 @@
         /* 콘텐츠 줄 수 설정 */
         flex-wrap: wrap;
         /* 콘텐츠 시작 방향 설정 (줄 수 나눔)) */
-        align-items: flex-end;
+        align-items: center;
         /* 콘텐츠 시작 방향 설정 (줄 수 나누지 않고 하나의 개체로 인식) */
         /* align-content: flex-start; */
         /* justify-content: center; */
@@ -21,9 +21,19 @@
         background-color: pink;
       }
 
+      /* row: 행 - 가로 */
+      /* column: 열 - 세로 */
+      /* flex-firection: 주축 설정 (행 or 열) */
+      /* flex-wrap: 줄바꿈 여부 (wrap시 여러 줄로 나옴) */
+      /* justify-content: 주축에서 정렬 방법 (콘텐츠 시작점) */
+      /* align-items: warp 일때 정렬 방법 (각 줄을 개별 개체로 인식) */
+      /* align-content: warp일때 일때 정렬 (각 줄을 하나의 개체로 인식) */
+
       .container div {
         width: 100px;
         height: 100px;
+        line-height: 100px;
+        text-align: center;
       }
 
       .container div:nth-child(2n) {
@@ -36,14 +46,14 @@
   </head>
   <body>
     <div class="container">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>4</div>
+      <div>5</div>
+      <div>6</div>
+      <div>7</div>
+      <div>8</div>
     </div>
   </body>
 </html>
