자바스크립트를 시작하다

--- a/html/(실습) 카페 음료 문서 작성 실습.html
+++ b/html/(실습) 카페 음료 문서 작성 실습.html
@@ -14,7 +14,7 @@
       <li>아메리카노 (₩ 3,000)</li>
       <li>카페라떼 (₩ 3,500)</li>
       <li>아이스티 (₩ 3,000)</li>
-      <li>밀크티 (₩ 4,000)</li>
+      <li>밀크티 (₩ 4,000)</li>ㅌ
     </ul>
 
     <hr />
