--- a/Javascript/variable.html
+++ b/Javascript/variable.html
@@ -137,6 +137,7 @@
       console.log(dog);
       console.log(dog.name);
       console.log(dog.age);
+      console.log(dog.mew);
 
       // 실습
       console.log(`아래는 Javascript 2번 ${prac1} 입니다.`);
@@ -243,9 +244,14 @@
       // 함수 { 스코프 } - 스코프 내에서 변수 선언시 다른 곳에서 변수 사용 불가
       // 함수는 선언 하고 호출한다!
 
-      // 호출을 해야 실행 가능
+      // 호출(실행하겠다)을 해야 실행 가능
       // 함수 선언문은 어디 있더라도 호출이 가능 (호이스팅 hoisting)
       // 함수 표현식은 해당 코드에 도달해야 생성 및 사용
+
+      let add = function (num1, num2) {
+        return num1 + num2;
+      };
+      console.log(add);
     </script>
   </head>
   <body></body>
