--- a/html/23.10.24_html03.html
+++ b/html/23.10.24_html03.html
@@ -16,7 +16,7 @@
         <input type="password" name="" id="" placeholder="Password" />
       </div>
       <div>
-        <input type="button" value="버튼" id="" />
+        <input type="button" value="버튼" id="" disabled />
       </div>
 
       <br />
