--- a/html/23.10.27_html25(실습).html
+++ b/html/23.10.27_html25(실습).html
@@ -11,7 +11,7 @@
         height: 10vw;
         text-align: center;
         line-height: 10vw;
-        color: blue;
+        color: white;
         margin: auto;
         /* margin-top: calc((100% - 10vw) / 5); */
         /* margin-top: calc(50% - 5vw); */
@@ -23,7 +23,7 @@
     </style>
   </head>
   <body>
-      <div>KDT</div>
+      <div>clac 값 적용</div>
     </div>
   </body>
 </html>
