--- a/Responsive Web/mediaQuery_prac03.html
+++ b/Responsive Web/mediaQuery_prac03.html
@@ -8,6 +8,17 @@
       src="https://kit.fontawesome.com/837ff3adc1.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
 
     <style>
       /* * {
@@ -15,6 +26,7 @@
       } */
 
       body {
+        height: 2000px;
         margin: 0;
         padding: 0;
       }
@@ -81,7 +93,7 @@
           position: absolute;
           top: 60px;
           width: 100%;
-          height: 160px;
+          height: 180px;
         }
 
         header .inner .menu li {
@@ -161,7 +173,7 @@
     </style>
   </head>
   <body>
-    <header>
+    <header class="fixed-top">
       <div class="inner">
         <div class="logo">
           <i class="fa-solid fa-igloo"></i>
