--- a/prac/blog.html
+++ b/prac/blog.html
@@ -18,5 +18,17 @@
   </body>
   <script>
     console.log("JS 실행! 4");
+
+    const name = 27;
+    console.log("이름:", name);
+    console.log("이름:" + name);
+
+    let color = ["red", "orange", "yellow", "green", "blue"];
+
+    console.log(color.length);
+
+    color.push("navy");
+    console.log(color);
+    // 출력 => red
   </script>
 </html>
